--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,23 @@
 version: 0.2
- 
+
 phases:
   install:
     runtime-versions:
-        nodejs: 18
+      nodejs: 18
     commands:
-        - echo Installing dependencies...
-        - npm install
- 
+      - echo "Installing Node.js dependencies"
+      - npm install
+
   build:
     commands:
-        - echo Build started on `date`
-        - echo Compiling the Node.js code...
-        - npm run build
- 
+      - echo "No run build currently needed"
+
+
 artifacts:
   files:
     - '**/*'
   discard-paths: yes
+
+cache:
+  paths:
+    - 'node_modules/**/*'
