--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-    "name": "dmmc-artists",
-    "version": "1.0.0",
-    "description": "Hello DMMC Artist List Node.js app for AWS Elastic Beanstalk",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "express": "^4.18.1"
-    }
+  "name": "dmmc",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {"async": "2.5.x"},
+  "scripts": {
+    "start": "node app.js"
   }
-  
+}
