--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "dmmc",
   "version": "0.0.1",
-  "private": true,
-  "dependencies": {"async": "2.5.x"},
+  "description": "Hello DMMC Artists",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
+  },
+  "dependencies": {
+    "async": "2.5.x",
+    "express": "^4.18.1"
   }
 }
