--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 10  
+      nodejs: 18  
     commands:
       - echo Installing Mocha...
       - npm install -g mocha
@@ -18,18 +18,27 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Compiling the Node.js code
+#      - npm run build
       - mocha test.js
   post_build:
     commands:
+      - npm list
       - echo Build completed on `date`
+
 # Include only the files required for your application to run.
 # Do not use recursively include artifacts from node_modules directory as it will include unnecessary packages 
 # used only for building and testing.
 # ExpressJS apps will need other artifact directories included (bin/*, public/*, routes/*, views/* etc).
+
+#artifacts:
+#  files:
+#    - app.js
+#    - index.html
+#    - package.json
+#    - node_modules/async/*
+#    - node_modules/lodash/*
 artifacts:
   files:
-    - app.js
-    - index.html
-    - package.json
-    - node_modules/async/*
-    - node_modules/lodash/*
+    - '**/*'
+ 
+# discard-paths: yes
