Removing artifacts wildcards again.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,15 +30,15 @@ phases:
 # used only for building and testing.
 # ExpressJS apps will need other artifact directories included (bin/*, public/*, routes/*, views/* etc).
 
-#artifacts:
-#  files:
-#    - app.js
-#    - index.html
-#    - package.json
-#    - node_modules/async/*
-#    - node_modules/lodash/*
 artifacts:
   files:
-    - '**/*'
+    - app.js
+    - index.html
+    - package.json
+    - node_modules/async/*
+    - node_modules/lodash/*
+#artifacts:
+#  files:
+#    - '**/*'
  
 # discard-paths: yes
