adding node_modules/express

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -37,8 +37,10 @@ artifacts:
     - package.json
     - node_modules/async/*
     - node_modules/lodash/*
+    - node_modules/express/*
+
 #artifacts:
 #  files:
 #    - '**/*'
  
-discard-paths: no
+discard-paths: yes
