--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,17 +32,16 @@ phases:
 
 artifacts:
   files:
-    - app.js
-    - index.html
-    - package.json
-    - package-lock.json
-    - node_modules/async/*
-    - node_modules/lodash/*
-    - node_modules/express/*
+    - 'app.js'
+    - 'index.html'
+    - 'package.json'
+    - 'package-lock.json'
+    - 'node_modules/async/*'
+    - 'node_modules/lodash/*'
+    - 'node_modules/express/*'
   discard-paths: yes
 
 #artifacts:
 #  files:
 #    - '**/*'
- 
-
+#   discard-paths: yes
