--- a/buildspec.yml
+++ b/buildspec.yml
@@ -43,5 +43,9 @@ phases:
 
 artifacts:
   files:
-    - '**/*'
+    - 'app.js'
+    - 'index.html'
+    - 'package.json'
+    - 'package-lock.json'
+    - 'node_modules/**/*'
   discard-paths: yes
